2003-07-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (_traverse_variable_recursively_worker):
	Do not return undef when a variable is recursively defined, this
	causes warnings all over the place.  Return the empty string instead.

	* lib/am/distdir.am (distcheck): Protect loop of DIST_ARCHIVES
	from empty DIST_ARCHIVES.

2003-07-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_autoconf_traces): Check the expected
	number of arguments of each traced macro.
	* tests/overrid.test: Fix call to AM_CONDITIONAL.
	* tests/conff2.test: New files.
	* tests/Makefile.am (TESTS): Add conff2.test.
	Report from Paolo Bonzini.

2003-06-30  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in ($SUBST_REF_PATTERN): Do not define.
	(%gen_varname): Move to Variable.pm, as %_gen_varname.
	(initialize_per_input): Do not clean %gen_varname.
	(handle_options, check_libobjs_sources, handle_source_transform,
	handle_LIBOBJS, handle_ltlibraries, handle_texinfo_helper,
	handle_man_pages, handle_dist, handle_subdirs, handle_gettext,
	am_install_var): Adjust to use value_as_list_recursive,
	loc_and_value_as_list_recursive, and has_conditional_contents.
	(require_file_with_macro): Accept an Automake::Variable as argument.
	(traverse_variable_recursively,
	traverse_variable_recursively_worker, gen_varname,
	transform_variable_recursively): Move ...
	* lib/Automake/Variable.pm (traverse_variable_recursively,
	_traverse_variable_recursively_worker,
	_gen_varname, transform_variable_recursively): ... here.
	* automake.in (variable_conditionally_defined,
	variable_value_as_list_recursive_worker,
	variable_value_as_list_recursive
	variable_loc_and_value_as_list_recursive): Move ...
	* lib/Automake/Variable.pm (has_conditional_contents,
	_value_as_list_recursive_worker,
	value_as_list_recursive, loc_and_value_as_list_recursive): ... here.
	(reset): Reset %_gen_varname.
	(require_variables_for_variable): Accept an Automake::Variable
	as argument.
