@@ -5435,7 +5435,7 @@ sub cond_stack_else ($$$)
   if (! @cond_stack)
     {
       error $where, "else without if";
-      return;
+      return FALSE;
     }
 
   $cond_stack[$#cond_stack] =
@@ -5465,8 +5465,8 @@ sub cond_stack_endif ($$$)
 
   if (! @cond_stack)
     {
-      error $where, "endif without if: $negate$cond";
-      return;
+      error $where, "endif without if";
+      return TRUE;
     }
 
   # If $COND is given, check against it.
