@@ -1,3 +1,10 @@
+2003-07-03  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* automake.in (cond_stack_else): Return FALSE if `if' was not
+	used.
+	(cond_stack_endif): Return TRUE if `if' was not used.  Do not
+	display $negate and $cond, they are irrelevant and maybe undefined.
+
 2003-07-02  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/Automake/Variable.pm (_traverse_variable_recursively_worker):
